--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,9 @@
 <html>
 <head>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <title>Boilerplate</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
 <div id="app"></div>
-<script src="./main.min.js"></script>
 </body>
 </html>
